# laplacian_of_gaussians

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blobs.cpp  blobs.h
docs/TeX/: abbreviations.tex  mathematical_documentations.tex
examples/: CMakeLists.txt  example1.cpp  example2.cpp
include/: blobDetection.hpp
include/blobDetection/: GaussianBlob.hpp  checkOverlap.hpp  gaussian_filter.hpp  log.hpp  paintBlobs.hpp  scaleSpaceRepresentation.hpp  stackToMatrix.hpp  strictLocalMaximizer3D.hpp
src/: GaussianBlob.h  GaussianBlob.hpp  blobs.hpp  checkOverlap.h  gaussian_filter.h  localMinMax.h  log.h  log.hpp  paintBlobs.h  paintBlobs.hpp  scaleSpaceRepresentation.h  scaleSpaceRepresentation.hpp  stackToMatrix.h  stackToMatrix.hpp  strictLocalMaximizer3D.h
tests/: CMakeLists.txt  testCheckOverlap.cpp  testDilate3D.cpp  testGaussianBlob.cpp  testGaussianFilter.cpp  testLocalMinMax.cpp  testMorph.cpp  testPaintBlobs.cpp  testScaleSpaceRepresentation.cpp  testStrictLocalMaximizer3D.cpp  testlog.cpp
